--- a/teiri.html
+++ b/teiri.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+ <html lang="ja" prefix="og: http://ogp.me/ns#"></html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://yoshida0319.github.io/teiri/teiri.html" />
+    <meta property="og:title" content="リウヴィルの定理" />
+    <meta property="og:description" content="リウヴィルの定理を使用した面白い式作成機です。" />
     <title>リウヴィルの定理</title>
     <link rel="stylesheet" href="teiri.css">
 </head>
