--- a/teiri.html
+++ b/teiri.html
@@ -8,6 +8,7 @@
     <meta property="og:url" content="https://yoshida0319.github.io/teiri/teiri.html" />
     <meta property="og:title" content="リウヴィルの定理" />
     <meta property="og:description" content="リウヴィルの定理を使用した面白い式作成機です。" />
+    <meta property="og:type" content="artycle"/>
     <title>リウヴィルの定理</title>
     <link rel="stylesheet" href="teiri.css">
 </head>
