--- a/teiri.html
+++ b/teiri.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<html lang="ja" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
+    <head prefix="og: https://ogp.me/ns#">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:url" content="https://yoshida0319.github.io/teiri/teiri.html" />
