--- a/teiri.html
+++ b/teiri.html
@@ -44,8 +44,7 @@
                     これはnがいかなる値であろうと成り立つそうです。<br>
                     正直証明はよくわかりませんがアルゴリズムだけ作ってみました。<br>
                     しかしnの値によっては同じ数式が出てくる可能性もあります。<br>
-                    たとえばn=15とn=10では同じ式が出てきます。<br>
-                    バグではありませんのでご安心ください。
+                    たとえばn=15とn=10では同じ式が出てきますが、バグではありませんのでご安心ください。
                 </h4>
             </div>
         </div>
