--- a/teiri.html
+++ b/teiri.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="teiri.css">
 </head>
 <body>
-    <h1>面白い式作成</h1>
+    <h1 class="hh">面白い式作成</h1>
     <div class="tenntenn">
         <input name="sasa" id="kannga" class="sase" type="radio" checked>
         <input name="sasa" id="eyou" class="sase" type="radio">
